# cross-platform-game-client

./: ActivePlayer.cpp  ActivePlayer.h  Browser.cpp  Browser.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Color.h  Controls.cpp  Controls.h  DebugVariables.cpp  Game.cpp  Game.h  Hud.cpp  Hud.h  HudElement.h  Location.h  Map.cpp  Map.h  Player.cpp  Player.h  RenderTimer.cpp  RenderTimer.h  Timer.cpp  Timer.h  TouchControls.cpp  TouchControls.h  main.cpp
include/: Browser.h  Canvas.h  Connection.h  Controls.h  DebugVariables.h  Game.h  GameMode.h  Hud.h  HudBox.h  HudElement.h  HudSelection.h  Location.h  Map.h  MiniMap.h  Player.h  SpawnButton.h  TouchControls.h  UserPlayer.h  Util.h
public/: a.css  a.js  a.js.mem  a.wasm.js  a.wasm.wasm  a.wasm.wasm.map  a.wasm.wast  index.html  network.js
setup/: setup.js
src/: Browser.cpp  Camera.cpp  Canvas.cpp  Connection.cpp  Controls.cpp  DebugVariables.cpp  Game.cpp  Hud.cpp  HudBox.cpp  HudElement.cpp  HudSelection.cpp  Map.cpp  MiniMap.cpp  Player.cpp  SpawnButton.cpp  TouchControls.cpp  UserPlayer.cpp  Util.cpp  main.cpp
